--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     
-    <div class="container offset-sm-1 col-xl-8 col-lg-10 col-md-11 col-sm-12 col-xm-12">
+    <div class="container offset-xl-2 offset-sm-1 col-xl-8 col-lg-10 col-md-11 col-sm-12 col-xm-12">
         <div class="row justify-content-lg-center ">
             <div class="d-flex paymentDueTile flex-column text-center justify-content-between col-lg-3 ">
                 <div class="main justify-content-between ">
